# hillelFastAPI

./: docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
nginx/: nginx.conf
