[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Yakov Korotia",email = "yakov0959@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standart] (>=0.123.6,<0.124.0)"
]


[build-system]
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.14,<0.116.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "alembic (>=1.16.3,<2.0.0)",
    "password-strength (>=0.0.3.post2,<0.0.4)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (<4.0)",
    "scalar-fastapi (>=1.3.0,<2.0.0)",
    "sentry-sdk[fastapi] (>=2.35.1,<3.0.0)",
    "orjson (>=3.11.3,<4.0.0)",
    "logtail-python (>=0.3.4,<0.4.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "fastapi-cache2[redis] (>=0.2.2,<0.3.0)",
    "aioboto3 (>=15.4.0,<16.0.0)",
    "stripe (>=13.1.0,<14.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
]




build-backend = "poetry.core.masonry.api"
